--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,10 @@ Suggests:
 Language: en-US
 Imports:
     magrittr,
+    purrr,
+    rlang,
     tibble
 Depends: 
-    tidyverse
+    tidyr,
+    tidyverse,
+    ggplot2
