Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,5 @@ Depends:
     tidyr,
     tidyverse,
     ggplot2
+URL: https://github.com/goment/hw04pgoment
+BugReports: https://github.com/goment/hw04pgoment/issues
